Fix HTML formatting and clean up code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- ======TOPBAR====== -->
+  <!-- ======TOPBAR====== 
   <div class="topbar">
     <div class="container top-inner">
       <div class="left">
@@ -21,7 +21,7 @@
         <a href="#donate" class="btn small">Donate</a>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- ======HEADER====== -->
 <header class="site-header">
@@ -244,9 +244,9 @@
 
         <form id="contactForm" class="contact-form" novalidate>
           <input id="vname" type="text" placeholder="Name" required>
-          <input id="vphone" type="tel" placeholder="Phone Number" required>
+          <input id="vphone" type="tel" placeholder="Phone Number " required>
           <input id="vemail" type="email" placeholder="Email" required>
-          <textarea id="vmsg" placeholder="Message / Interested Area" rows="5" required></textarea>
+          <textarea id="vmsg"  type = "text" placeholder="Message" rows="5" required></textarea>
 
           <div class="form-actions">
             <button class="btn" type="submit">Send Message</button>
@@ -270,7 +270,7 @@
             <a href="#" aria-label="instagram">Instagram</a>
           </div>
 
-          <a class="btn" href="society registration.pdf" target="_blank">View Registration</a>
+          
         </div>
       </aside>
     </div>
@@ -284,11 +284,7 @@
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>© <span id="year"></span> Rural Informative & Social Harmony Academy</div>
-      <div class="links">
-        <a href="#about">About</a>
-        <a href="#programs">Programs</a>
-        <a href="#contact">Contact</a>
-      </div>
+    
     </div>
   </footer>
 
@@ -305,4 +301,5 @@
   
 
  
+
 
